# ProjectProtei

./: CDRWorker.cpp  CDRWorker.h  CMakeLists.txt  Callprocessing.cpp  Callprocessing.h  Configjson.cpp  Configjson.h  Description.docx  JSON_Timer_Server.pro  README.md  Server.cpp  Server.cpp.autosave  Server.h  Serverworker.cpp  Serverworker.h  config.json  main.cpp  operators.cpp  operators.h  simpletimer.cpp  simpletimer.h
Include/: CDRWorker.h  Caller.h  Callprocessing.h  Configjson.h  Mylogger.h  Server.h  Serverworker.h  mylogger.h
Sources/: CDRWorker.cpp  Caller.cpp  Callprocessing.cpp  Configjson.cpp  Server.cpp  Serverworker.cpp  main.cpp  mylogger.cpp
Test/: CMakeLists.txt  Test_CDRWorker.cpp  Test_Configjson.cpp  Test_Serverworker.cpp  main.cpp  tst_cfg.cpp
untitled5/: CMakeLists.txt  main.cpp
